docs: broken link fixes part 1

--- a/src/pages/contributing/add-ons.mdx
+++ b/src/pages/contributing/add-ons.mdx
@@ -25,8 +25,8 @@ If your team is using Carbon and needs components specific to your product or
 industry, you should create a Carbon add-on.
 
 If you feel that your components and/or patterns could be used in other
-products, we encourage you to [contribute](/how-to-contribute/overview) your
-work back to Carbon.
+products, we encourage you to [contribute](/contributing/overview) your work
+back to Carbon.
 
 ### Private vs public
 
