--- a/src/pages/contributing/component/index.mdx
+++ b/src/pages/contributing/component/index.mdx
@@ -680,8 +680,8 @@ You should include color tokens and type tokens used.
 #### 3. A Sketch symbol
 
 Any new components or changes to existing components will also live in the
-[Carbon Sketch kit](/get-started/design#get-the-kit) and so we'll need a Sketch
-symbol. Check out
+[Carbon Sketch kit](/designing/kits/sketch) and so we'll need a Sketch symbol.
+Check out
 [Sketch's guide](https://www.sketch.com/docs/symbols/creating-symbols/) for
 creating a symbol.
 
