--- a/src/pages/contributing/governance.mdx
+++ b/src/pages/contributing/governance.mdx
@@ -52,7 +52,7 @@ Encourage community members to speak up.
 The Carbon core team works for IBM. To accept contributions, we need a signed
 Contributor License Agreement (CLA) from you before code contributions can be
 reviewed and merged. If you have questions, please don't hesitate
-to [reach out](https://www.carbondesignsystem.com/help/support#email).
+to [reach out](/help/contact-us).
 
 ## Support
 
