--- a/src/pages/designing/design-resources/index.mdx
+++ b/src/pages/designing/design-resources/index.mdx
@@ -30,8 +30,8 @@ so that you fully understand what drives IBM's design philosophy and principles,
 and can make informed decisions in your product design work.
 
 To use the Sketch libraries you'll find here, you need the **most recent
-version** of [Sketch](<(https://www.sketch.com/)>) installed. If you’re new to
-the design kit, visit the [Design kits](designing/kits/sketch) page.
+version** of [Sketch](https://www.sketch.com/) installed. If you’re new to the
+design kit, visit the [Design kits](/designing/kits/sketch) page.
 
 For data visualization resources, go to the
 [Data visualization](/data-visualization/getting-started) section of the site.
