--- a/src/pages/designing/kits/sketch.mdx
+++ b/src/pages/designing/kits/sketch.mdx
@@ -244,8 +244,8 @@ detaching the symbol to change default styles.
 
 Carbon text styles in Sketch are organized similarly to symbols.
 
-- The first text style level displays [theme options](/guidelines/themes) (i.e.,
-  white theme).
+- The first text style level displays
+  [theme options](/guidelines/themes/overview) (i.e., white theme).
 - The second level shows the [Carbon type](/guidelines/typography/overview)
   tokens (i.e., body-long-01).
 - The third level selects the type color, which is labeled with a
@@ -286,7 +286,7 @@ previous version.
 ### Migration
 
 If you're using an older version of Carbon, check out the v10
-[migration docs](/updates/v10-migration/designers) when you're ready to make the
+[migration docs](/help/migration-guide/design/) when you're ready to make the
 switch.
 
 ### Support
