--- a/src/pages/developing/angular-tutorial/overview.mdx
+++ b/src/pages/developing/angular-tutorial/overview.mdx
@@ -46,8 +46,8 @@ you will build:
 
 This tutorial is intended for people with all amounts of web development
 experience. If you want to jump straight to code, you may want to skip this
-tutorial and go to the
-[developers getting started](/get-started/develop/angular) page.
+tutorial and go to the [developers getting started](/developing/get-started)
+page.
 
 ## Prerequisites
 
@@ -84,13 +84,13 @@ Each step in this tutorial illustrates a different aspect of developing web
 applications with Carbon. We recommend starting with step 1, but you can pick up
 any step and take it from there.
 
-1. [**Installing Carbon**](/tutorial/angular/step-1)
+1. [**Installing Carbon**](/developing/angular-tutorial/step-1)
    - Create a web app with the UI shell component.
-1. [**Building pages**](/tutorial/angular/step-2)
+1. [**Building pages**](/developing/angular-tutorial/step-2)
    - Build out pages with the grid and various components.
-1. [**Using APIs**](/tutorial/angular/step-3)
+1. [**Using APIs**](/developing/angular-tutorial/step-3)
    - Populate the data table with an external data source.
-1. [**Creating components**](/tutorial/angular/step-4)
+1. [**Creating components**](/developing/angular-tutorial/step-4)
    - Extend Carbon by creating your own components.
-1. [**Deploying to IBM Cloud**](/tutorial/angular/step-5)
+1. [**Deploying to IBM Cloud**](/developing/angular-tutorial/step-5)
    - Build and host your app in a production environment.
