--- a/src/pages/developing/angular-tutorial/step-2.mdx
+++ b/src/pages/developing/angular-tutorial/step-2.mdx
@@ -56,7 +56,7 @@ This tutorial has an accompanying GitHub repository called
 that we'll use as a starting point for each step. If you haven't forked and
 cloned that repository yet, and haven't added the upstream remote, go ahead and
 do so by following the
-[step 1 instructions](/tutorial/angular/step-1#fork-clone--branch).
+[step 1 instructions](/developing/angular-tutorial/step-1#fork-clone-and-branch).
 
 ### Branch
 
@@ -92,7 +92,7 @@ npm start
 ```
 
 You should see something similar to where the
-[previous step](/tutorial/angular/step-1)) left off.
+[previous step](/developing/angular-tutorial/step-1) left off.
 
 ## Add grid
 
@@ -446,8 +446,7 @@ for now.
 
 We've added basic layout styles in `landing-page.component.scss` and
 `styles.scss`, so now let's add type, color and spacing styles to match the
-design. We'll be using our
-[spacing tokens](https://www.carbondesignsystem.com/guidelines/spacing). In
+design. We'll be using our [spacing tokens](/guidelines/spacing/overview). In
 `landing-page.component.scss`, add these imports at the **top** of the file so
 we can use Carbon breakpoints, tokens, and typography Sass mixins and functions:
 
@@ -854,8 +853,8 @@ npm run lint && npm test
 <InlineNotification>
 
 **Note:** Having issues running this?
-[Step 1](</tutorial/angular/step-1#continuous-integration-(ci)-check>) has
-troubleshooting notes that may help.
+[Step 1](</developing/angular-tutorial/step-1#continuous-integration-(ci)-check>)
+has troubleshooting notes that may help.
 
 </InlineNotification>
 
@@ -876,8 +875,8 @@ git push origin angular-step-2
 <InlineNotification>
 
 **Note:** Having issues pushing your changes?
-[Step 1](/tutorial/angular/step-1#git-commit-and-push) has troubleshooting notes
-that may help.
+[Step 1](/developing/angular-tutorial/step-1#git-commit-and-push) has
+troubleshooting notes that may help.
 
 </InlineNotification>
 
