--- a/src/pages/developing/angular-tutorial/step-3.mdx
+++ b/src/pages/developing/angular-tutorial/step-3.mdx
@@ -67,7 +67,7 @@ This tutorial has an accompanying GitHub repository called
 that we'll use as a starting point for each step. If you haven't forked and
 cloned that repository yet, and haven't added the upstream remote, go ahead and
 do so by following the
-[step 1 instructions](/tutorial/angular/step-1#fork-clone--branch).
+[step 1 instructions](/developing/angular-tutorial/step-1#fork-clone-and-branch).
 
 ### Branch
 
@@ -94,8 +94,8 @@ npm start
 ```
 
 You should see something similar to where the
-[previous step](/tutorial/angular/step-2) left off. Stop your app with `CTRL-C`
-and let's get everything installed.
+[previous step](/developing/angular-tutorial/step-2) left off. Stop your app
+with `CTRL-C` and let's get everything installed.
 
 ## Install dependencies
 
@@ -554,8 +554,8 @@ npm run lint && npm test
 <InlineNotification>
 
 **Note:** Having issues running the CI check?
-[Step 1](</tutorial/angular/step-1#continuous-integration-(ci)-check>) has
-troubleshooting notes that may help.
+[Step 1](</developing/angular-tutorial/step-1#continuous-integration-(ci)-check>)
+has troubleshooting notes that may help.
 
 </InlineNotification>
 
@@ -576,8 +576,8 @@ git push origin angular-step-3
 <InlineNotification>
 
 **Note:** Having issues pushing your changes?
-[Step 1](/tutorial/angular/step-1#git-commit-and-push) has troubleshooting notes
-that may help.
+[Step 1](/developing/angular-tutorial/step-1#git-commit-and-push) has
+troubleshooting notes that may help.
 
 </InlineNotification>
 
