--- a/src/pages/developing/angular-tutorial/step-5.mdx
+++ b/src/pages/developing/angular-tutorial/step-5.mdx
@@ -47,7 +47,7 @@ This tutorial has an accompanying GitHub repository called
 that we'll use as a starting point for each step. If you haven't forked and
 cloned that repository yet, and haven't added the upstream remote, go ahead and
 do so by following the
-[step 1 instructions](/tutorial/angular/step-1#fork-clone--branch).
+[step 1 instructions](/developing/angular-tutorial/step-1#fork-clone-and-branch).
 
 ### Branch
 
@@ -83,7 +83,7 @@ npm start
 ```
 
 You should see something similar to where the
-[previous step](/tutorial/angular/step-4) left off.
+[previous step](/developing/angular-tutorial/step-4) left off.
 
 ## Create IBM Cloud account
 
@@ -284,8 +284,8 @@ git push origin angular-step-5
 <InlineNotification>
 
 **Note:** Having issues pushing your changes?
-[Step 1](/tutorial/angular/step-1#git-commit-and-push) has troubleshooting notes
-that may help.
+[Step 1](/developing/angular-tutorial/step-1#git-commit-and-push) has
+troubleshooting notes that may help.
 
 </InlineNotification>
 
