--- a/src/pages/developing/get-started.mdx
+++ b/src/pages/developing/get-started.mdx
@@ -111,6 +111,6 @@ your framework of choice.
 
 <Row className="resource-card-group">
   <Column colLg={4} colMd={4} noGutterSm>
-    <ResourceCard subTitle="Developer resources" href="developer-resources" />
+    <ResourceCard subTitle="Developer resources" href="dev-resources" />
   </Column>
 </Row>
