--- a/src/pages/developing/react-tutorial/overview.mdx
+++ b/src/pages/developing/react-tutorial/overview.mdx
@@ -41,7 +41,7 @@ you will build:
 
 This tutorial is intended for people with all amounts of web development
 experience. If you want to jump straight to code, you may want to skip this
-tutorial and go to the [developers getting started](/get-started/develop/react)
+tutorial and go to the [developers getting started](/developing/get-started)
 page.
 
 ## Prerequisites
@@ -82,13 +82,13 @@ Each step in this tutorial illustrates a different aspect of developing web
 applications with Carbon. We recommend starting with step 1, but you can pick up
 any step and take it from there.
 
-1. [**Installing Carbon**](/tutorial/react/step-1)
+1. [**Installing Carbon**](/developing/react-tutorial/step-1)
    - Create a web app with the UI shell component.
-2. [**Building pages**](/tutorial/react/step-2)
+2. [**Building pages**](/developing/react-tutorial/step-2)
    - Build out pages with the grid and various components.
-3. [**Using APIs**](/tutorial/react/step-3)
+3. [**Using APIs**](/developing/react-tutorial/step-3)
    - Populate the data table with an external data source.
-4. [**Creating components**](/tutorial/react/step-4)
+4. [**Creating components**](/developing/react-tutorial/step-4)
    - Extend Carbon by creating your own components.
-5. [**Deploying to IBM Cloud**](/tutorial/react/step-5)
+5. [**Deploying to IBM Cloud**](/developing/react-tutorial/step-5)
    - Build and host your app in a production environment.
