--- a/src/pages/developing/react-tutorial/step-3.mdx
+++ b/src/pages/developing/react-tutorial/step-3.mdx
@@ -63,7 +63,7 @@ This tutorial has an accompanying GitHub repository called
 we'll use as a starting point for each step. If you haven't forked and cloned
 that repository yet, and haven't added the upstream remote, go ahead and do so
 by following the
-[step 1 instructions](/tutorial/react/step-1#fork-clone--branch).
+[step 1 instructions](/developing/react-tutorial/step-1#fork-clone-and-branch).
 
 ### Branch
 
@@ -90,8 +90,8 @@ yarn start
 ```
 
 You should see something similar to where the
-[previous step](/tutorial/react/step-2) left off. Stop your app with `CTRL-C`
-and let's get everything installed.
+[previous step](/developing/react-tutorial/step-2) left off. Stop your app with
+`CTRL-C` and let's get everything installed.
 
 ## Install dependencies
 
@@ -584,8 +584,8 @@ yarn ci-check
 <InlineNotification>
 
 **Note:** Having issues running the CI check?
-[Step 1](</tutorial/react/step-1#continuous-integration-(ci)-check>) has
-troubleshooting notes that may help.
+[Step 1](</developing/react-tutorial/step-1#continuous-integration-(ci)-check>)
+has troubleshooting notes that may help.
 
 </InlineNotification>
 
@@ -606,8 +606,8 @@ git push origin react-step-3
 <InlineNotification>
 
 **Note:** Having issues pushing your changes?
-[Step 1](/tutorial/react/step-1#git-commit-and-push) has troubleshooting notes
-that may help.
+[Step 1](/developing/react-tutorial/step-1#git-commit-and-push) has
+troubleshooting notes that may help.
 
 </InlineNotification>
 
