--- a/src/pages/developing/react-tutorial/step-5.mdx
+++ b/src/pages/developing/react-tutorial/step-5.mdx
@@ -50,7 +50,7 @@ This tutorial has an accompanying GitHub repository called
 we'll use as a starting point for each step. If you haven't forked and cloned
 that repository yet, and haven't added the upstream remote, go ahead and do so
 by following the
-[step 1 instructions](/tutorial/react/step-1#fork-clone--branch).
+[step 1 instructions](/developing/react-tutorial/step-1#fork-clone-and-branch).
 
 ### Branch
 
@@ -86,7 +86,7 @@ yarn start
 ```
 
 You should see something similar to where the
-[previous step](/tutorial/react/step-4) left off.
+[previous step](/developing/react-tutorial/step-4) left off.
 
 ## Create IBM Cloud account
 
@@ -205,7 +205,7 @@ applications:
 
 **Note:** With this set-up we're still using a GitHub personal access token
 saved in `.env.local`. If you haven't created a GitHub access token yet, see
-[step 3](/tutorial/react/step-3#create-access-token). You can put the
+[step 3](/developing/react-tutorial/step-3#create-access-token). You can put the
 environment variable in the manifest file, or manually add it in the IBM Cloud
 dashboard, but since we're building off previous tutorial steps nothing more is
 needed.
@@ -301,8 +301,8 @@ yarn ci-check
 <InlineNotification>
 
 **Note:** Having issues running the CI check?
-[Step 1](</tutorial/react/step-1#continuous-integration-(ci)-check>) has
-troubleshooting notes that may help.
+[Step 1](</developing/react-tutorial/step-1#continuous-integration-(ci)-check>)
+has troubleshooting notes that may help.
 
 </InlineNotification>
 
@@ -323,8 +323,8 @@ git push origin react-step-5
 <InlineNotification>
 
 **Note:** Having issues pushing your changes?
-[Step 1](/tutorial/react/step-1#git-commit-and-push) has troubleshooting notes
-that may help.
+[Step 1](/developing/react-tutorial/step-1#git-commit-and-push) has
+troubleshooting notes that may help.
 
 </InlineNotification>
 
