--- a/src/pages/developing/react-tutorial/wrapping-up.mdx
+++ b/src/pages/developing/react-tutorial/wrapping-up.mdx
@@ -50,11 +50,11 @@ This badge demonstrates knowledge about Carbon's React components. To earn the
 badge:
 
 1. Complete steps 1 through 5 of the Carbon React tutorial
-   - Step 1. [Installing Carbon](/tutorial/react/step-1)
-   - Step 2. [Building pages](/tutorial/react/step-2)
-   - Step 3. [Using APIs](/tutorial/react/step-3)
-   - Step 4. [Creating components](/tutorial/react/step-4)
-   - Step 5. [Deploying to IBM Cloud](/tutorial/react/step-5)
+   - Step 1. [Installing Carbon](/developing/react-tutorial/step-1)
+   - Step 2. [Building pages](/developing/react-tutorial/step-2)
+   - Step 3. [Using APIs](/developing/react-tutorial/step-3)
+   - Step 4. [Creating components](/developing/react-tutorial/step-4)
+   - Step 5. [Deploying to IBM Cloud](/developing/react-tutorial/step-5)
 2. Have approved pull requests for steps 1 through 5 in the
    [carbon-tutorial repository](https://github.com/carbon-design-system/carbon-tutorial)
 3. Complete the
