--- a/src/pages/developing/vue-tutorial/overview.mdx
+++ b/src/pages/developing/vue-tutorial/overview.mdx
@@ -50,7 +50,7 @@ you will build:
 
 This tutorial is intended for people with all amounts of web development
 experience. If you want to jump straight to code, you may want to skip this
-tutorial and go to the [developers getting started](/get-started/develop/vue)
+tutorial and go to the [developers getting started](/developing/get-started)
 page.
 
 ## Prerequisites
@@ -88,13 +88,13 @@ Each step in this tutorial illustrates a different aspect of developing web
 applications with Carbon. We recommend starting with step 1, but you can pick up
 any step and take it from there.
 
-1. [**Installing Carbon**](/tutorial/vue/step-1)
+1. [**Installing Carbon**](/developing/vue-tutorial/step-1)
    - Create a web app with the UI shell component.
-1. [**Building pages**](/tutorial/vue/step-2)
+1. [**Building pages**](/developing/vue-tutorial/step-2)
    - Build out pages with the grid and various components.
-1. [**Using APIs**](/tutorial/vue/step-3)
+1. [**Using APIs**](/developing/vue-tutorial/step-3)
    - Populate the data table with an external data source.
-1. [**Creating components**](/tutorial/vue/step-4)
+1. [**Creating components**](/developing/vue-tutorial/step-4)
    - Extend Carbon by creating your own components.
-1. [**Deploying to IBM Cloud**](/tutorial/vue/step-5)
+1. [**Deploying to IBM Cloud**](/developing/vue-tutorial/step-5)
    - Build and host your app in a production environment.
