--- a/src/pages/developing/vue-tutorial/step-5.mdx
+++ b/src/pages/developing/vue-tutorial/step-5.mdx
@@ -51,7 +51,7 @@ This tutorial has an accompanying GitHub repository called
 that we'll use as a starting point for each step. If you haven't forked and
 cloned that repository yet, and haven't added the upstream remote, go ahead and
 do so by following the
-[step 1 instructions](/tutorial-vue/step-1/vue#fork-clone--branch).
+[step 1 instructions](/developing/vue-tutorial/step-1#fork-clone-and-branch).
 
 ### Branch
 
@@ -87,7 +87,7 @@ yarn serve
 ```
 
 You should see something similar to where the
-[previous step](/tutorial/vue/step-4) left off.
+[previous step](/developing/vue-tutorial/step-4) left off.
 
 ## Create IBM Cloud account
 
@@ -201,9 +201,10 @@ applications:
 
 **Note:** With this set-up we're still using a GitHub personal access token
 saved in `.env.local`. If you haven't created a GitHub access token yet, see
-[step 3](/tutorial/vue/step-3#create-access-token). You can put the environment
-variable in the manifest file, or manually add it in the IBM Cloud dashboard,
-but since we're building off previous tutorial steps nothing more is needed.
+[step 3](/developing/vue-tutorial/step-3#create-access-token). You can put the
+environment variable in the manifest file, or manually add it in the IBM Cloud
+dashboard, but since we're building off previous tutorial steps nothing more is
+needed.
 
 </InlineNotification>
 
@@ -283,7 +284,7 @@ yarn ci-check
 <InlineNotification>
 
 **Note:** Having issues running the CI check?
-[Step 1](/tutorial/vue/step-1#continuous-integration-ci-check) has
+[Step 1](/developing/vue-tutorial/step-1#continuous-integration-ci-check) has
 troubleshooting notes that may help.
 
 </InlineNotification>
@@ -305,8 +306,8 @@ git push origin vue-step-5
 <InlineNotification>
 
 **Note:** Having issues pushing your changes?
-[Step 1](/tutorial/vue/step-1#git-commit-and-push) has troubleshooting notes
-that may help.
+[Step 1](/developing/vue-tutorial/step-1#git-commit-and-push) has
+troubleshooting notes that may help.
 
 </InlineNotification>
 
