--- a/src/pages/developing/vue-tutorial/wrapping-up.mdx
+++ b/src/pages/developing/vue-tutorial/wrapping-up.mdx
@@ -50,11 +50,11 @@ This badge demonstrates knowledge about Carbon's Vue components. To earn the
 badge:
 
 1. Complete steps 1 through 5 of the Carbon Vue tutorial
-   - Step 1. [Installing Carbon](/tutorial/vue/step-1)
-   - Step 2. [Building pages](/tutorial/vue/step-2)
-   - Step 3. [Using APIs](/tutorial/vue/step-3)
-   - Step 4. [Creating components](/tutorial/vue/step-4)
-   - Step 5. [Deploying to IBM Cloud](/tutorial/vue/step-5)
+   - Step 1. [Installing Carbon](/developing/vue-tutorial/step-1)
+   - Step 2. [Building pages](/developing/vue-tutorial/step-2)
+   - Step 3. [Using APIs](/developing/vue-tutorial/step-3)
+   - Step 4. [Creating components](/developing/vue-tutorial/step-4)
+   - Step 5. [Deploying to IBM Cloud](/developing/vue-tutorial/step-5)
 2. Have approved pull requests for steps 1 through 5 in the
    [carbon-tutorial-vue repository](https://github.com/carbon-design-system/carbon-tutorial-vue)
 3. Complete the
