--- a/src/pages/guidelines/2x-grid/implementation.mdx
+++ b/src/pages/guidelines/2x-grid/implementation.mdx
@@ -825,7 +825,7 @@ cases as we find them.
 ## Incorporating the Shell
 
 We cover more about shell behavior on the 2x Grid Basics tab in the
-[Grid influencers](/guidelines/2x-grid/basics#grid-influencers) section.
+[Grid influencers](/guidelines/2x-grid/overview/#grid-influencers) section.
 However, we've had a lot of questions about how the shell works in conjunction
 with our grid. That's why we recently incorporated the shell into our grid
 tooling as a Sketch template. We'd also like to show it in action here in a
@@ -1137,9 +1137,9 @@ aspect ratio. We offer several classes for specifying aspect ratio for given
 content. We use these classes to maintain consistency throughout our UI.
 
 We discuss aspect ratios and various grid behaviors more in depth on the 2x Grid
-Basics tab, both in the [Aspect ratios](/guidelines/2x-grid/basics#aspect-ratio)
-section and in the [Grid behaviors](/guidelines/2x-grid/basics#grid-behaviors)
-section.
+Basics tab, both in the
+[Aspect ratios](/guidelines/2x-grid/overview/#aspect-ratio) section and in the
+[Grid behaviors](/guidelines/2x-grid/overview/#grid-behaviors) section.
 
 <InlineNotification>
 
