--- a/src/pages/guidelines/themes/overview.mdx
+++ b/src/pages/guidelines/themes/overview.mdx
@@ -248,9 +248,9 @@ $hover-field: #e5e5e5 !default;
 Carbon has two spacing scales, one for general spacing within components and the
 other for layout spacing. Both are designed to complement the components and
 typography throughout the system. Each scale has its own
-[distinct purpose](/guidelines/spacing). The two scales have certain overlapping
-values that serve two different roles, so be mindful when choosing a spacing
-token.
+[distinct purpose](/guidelines/spacing/overview). The two scales have certain
+overlapping values that serve two different roles, so be mindful when choosing a
+spacing token.
 
 ```scss
 //// _spacing.scss
