--- a/src/pages/developing/react-tutorial/step-4.mdx
+++ b/src/pages/developing/react-tutorial/step-4.mdx
@@ -59,7 +59,7 @@ This tutorial has an accompanying GitHub repository called
 we'll use as a starting point for each step. If you haven't forked and cloned
 that repository yet, and haven't added the upstream remote, go ahead and do so
 by following the
-[step 1 instructions](/tutorial/react/step-1#fork-clone--branch).
+[step 1 instructions](/developing/react-tutorial/step-1#fork-clone-and-branch).
 
 ### Branch
 
@@ -95,7 +95,7 @@ yarn start
 ```
 
 You should see something similar to where the
-[previous step](/tutorial/react/step-3) left off.
+[previous step](/developing/react-tutorial/step-3) left off.
 
 ## Review design
 
@@ -456,8 +456,8 @@ yarn ci-check
 <InlineNotification>
 
 **Note:** Having issues running the CI check?
-[Step 1](</tutorial/react/step-1#continuous-integration-(ci)-check>) has
-troubleshooting notes that may help.
+[Step 1](</developing/react-tutorial/step-1#continuous-integration-(ci)-check>)
+has troubleshooting notes that may help.
 
 </InlineNotification>
 
@@ -478,8 +478,8 @@ git push origin react-step-4
 <InlineNotification>
 
 **Note:** Having issues pushing your changes?
-[Step 1](/tutorial/react/step-1#git-commit-and-push) has troubleshooting notes
-that may help.
+[Step 1](/developing/react-tutorial/step-1#git-commit-and-push) has
+troubleshooting notes that may help.
 
 </InlineNotification>
 
