--- a/src/pages/developing/vue-tutorial/step-4.mdx
+++ b/src/pages/developing/vue-tutorial/step-4.mdx
@@ -60,7 +60,7 @@ This tutorial has an accompanying GitHub repository called
 that we'll use as a starting point for each step. If you haven't forked and
 cloned that repository yet, and haven't added the upstream remote, go ahead and
 do so by following the
-[step 1 instructions](/tutorial/vue/step-1#fork-clone--branch).
+[step 1 instructions](/developing/vue-tutorial/step-1#fork-clone-and-branch).
 
 ### Branch
 
@@ -96,7 +96,7 @@ yarn serve
 ```
 
 You should see something similar to where the
-[previous step](/tutorial/vue/step-3) left off.
+[previous step](/developing/vue-tutorial/step-3) left off.
 
 ## Review design
 
@@ -540,7 +540,7 @@ yarn ci-check
 <InlineNotification>
 
 **Note:** Having issues running the CI check?
-[Step 1](/tutorial/vue/step-1#continuous-integration-ci-check) has
+[Step 1](/developing/vue-tutorial/step-1#continuous-integration-ci-check) has
 troubleshooting notes that may help.
 
 </InlineNotification>
@@ -562,8 +562,8 @@ git push origin vue-step-4
 <InlineNotification>
 
 **Note:** Having issues pushing your changes?
-[Step 1](/tutorial/vue/step-1#git-commit-and-push) has troubleshooting notes
-that may help.
+[Step 1](/developing/vue-tutorial/step-1#git-commit-and-push) has
+troubleshooting notes that may help.
 
 </InlineNotification>
 
