docs: broken link fixes part 2

--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -434,10 +434,10 @@ or ghost buttons in layouts with more than three calls to action.
 Ideally, when using groups of related buttons (not including ghost buttons),
 they should all be the same width. This can be achieved in one of two ways, both
 of which are acceptable. The first approach involves using the
-[narrow grid mode](/guidelines/2x-grid/code). In this situation each button
-would be set individually on the column grid. _Note: Carbon developers are
-working on the narrow grid mode, currently left-hanging buttons can only be
-achieved with an override._
+[narrow grid mode](/guidelines/2x-grid/implementation#grid-modes). In this
+situation each button would be set individually on the column grid. _Note:
+Carbon developers are working on the narrow grid mode, currently left-hanging
+buttons can only be achieved with an override._
 
 <Row>
 <Column colLg={8}>
@@ -556,7 +556,7 @@ There are exceptions to this rule for situations in which button length could
 cause problems in compact UIs or negatively impact translation, but the {verb} +
 {noun} formula is still best practice.
 
-For consistency, see Carbon’s [content guidelines](guidelines/content/overview)
+For consistency, see Carbon’s [content guidelines](/guidelines/content/overview)
 for a list of recommended action labels.
 
 <DoDontRow>
