--- a/src/pages/components/checkbox/usage.mdx
+++ b/src/pages/components/checkbox/usage.mdx
@@ -246,7 +246,7 @@ For more information about spacing for the checkbox component itself, see the
 ### Further guidance
 
 For further content guidance, see Carbon's
-[content guidelines](notion://www.notion.so/guidelines/content/general).
+[content guidelines](/guidelines/content/overview).
 
 ## Behaviors
 
