--- a/src/pages/components/code-snippet/usage.mdx
+++ b/src/pages/components/code-snippet/usage.mdx
@@ -185,7 +185,7 @@ text._
 ### Further guidance
 
 For further content guidance, see Carbon's
-[content guidelines](notion://www.notion.so/guidelines/content/general).
+[content guidelines](/guidelines/content/overview).
 
 ## Universal behaviors
 
