--- a/src/pages/components/date-picker/usage.mdx
+++ b/src/pages/components/date-picker/usage.mdx
@@ -519,7 +519,7 @@ a tile.
 Another common use case not accounted for in the above pickers is setting a time
 or date relative to today or now, such as with a reminder. For example, setting
 an install to begin now, in one hour, or tonight. This type of picker can made
-by using the standard [select](link) component.
+by using the standard [select](/components/select/usage/) component.
 
 #### Using individual inputs
 
