--- a/src/pages/components/dropdown/usage.mdx
+++ b/src/pages/components/dropdown/usage.mdx
@@ -324,7 +324,7 @@ browser-based tooltip to show the full string of text.
 ### Further guidance
 
 For further content guidance, see Carbon's
-[content guidelines](notion://www.notion.so/guidelines/content/general).
+[content guidelines](/guidelines/content/overview).
 
 ## Universal behaviors
 
