--- a/src/pages/components/modal/usage.mdx
+++ b/src/pages/components/modal/usage.mdx
@@ -285,7 +285,7 @@ style, no other body copy may be included.
 ### Further guidance
 
 For further content guidance, see Carbon's
-[content guidelines](/guidelines/content/general).
+[content guidelines](/guidelines/content/overview).
 
 ## Behaviors
 
@@ -439,10 +439,11 @@ buttons.
 ### Danger modal
 
 Danger modal is a specific type of
-[transactional modal](/modal/usage#transactional-modal) used for destructive or
-irreversible actions. In danger modal, the primary button is replaced by a
-danger button. They are commonly used in high impact moments as a confirmation
-for an action that would result in a significant data loss if done accidentally.
+[transactional modal](/components/modal/usage#transactional-modal) used for
+destructive or irreversible actions. In danger modal, the primary button is
+replaced by a danger button. They are commonly used in high impact moments as a
+confirmation for an action that would result in a significant data loss if done
+accidentally.
 
 <Row>
 <Column colLg={8}>
