--- a/src/pages/patterns/empty-states-pattern/index.mdx
+++ b/src/pages/patterns/empty-states-pattern/index.mdx
@@ -435,7 +435,7 @@ Norman group’s
 
 A pattern providing guidance for error states is currently being planned. If you
 would like to contribute, please see our
-[guidelines for contributions](/how-to-contribute/pattern).
+[guidelines for contributions](/contributing/pattern).
 
 ## In-depth alternatives
 
@@ -519,7 +519,7 @@ in conjunction with basic empty states.
 A pattern providing guidance for onboarding is currently being planned. It will
 include a framework for matching user needs with design solutions, tips for
 writing copy, and general best practices. If you would like to contribute,
-please see our [guidelines for contributions](/how-to-contribute/pattern).
+please see our [guidelines for contributions](/contributing/pattern).
 
 ### Starter content
 
