--- a/src/pages/patterns/notification-pattern/index.mdx
+++ b/src/pages/patterns/notification-pattern/index.mdx
@@ -454,7 +454,7 @@ receive, which is particularly helpful for users with cognitive limitations.
 
 The Error state pattern is currently being planned. If you would like to
 contribute, please see our
-[guidelines for contributions](https://www.carbondesignsystem.com/how-to-contribute/pattern).
+[guidelines for contributions](/contributing/pattern).
 
 ## References
 
