--- a/src/pages/patterns/search-pattern/index.mdx
+++ b/src/pages/patterns/search-pattern/index.mdx
@@ -48,9 +48,9 @@ and the location of the search within your product.
 
 The placement of your search field depends on the construction of your
 application and the scope of the search. For global searches, see the
-[global header pattern](/patterns/global-header-pattern) for placement guidance.
-See the [data table](/components/data-table/usage#search) component for search
-placement within a data table.
+[global header pattern](/patterns/global-header) for placement guidance. See the
+[data table](/components/data-table/usage#search) component for search placement
+within a data table.
 
 ### Anatomy
 
@@ -429,9 +429,8 @@ several similar data sets without knowing where the information lives. If the
 user is likely to know the location of their data, offer a scope filter.
 
 A successful focused search will route a user directly to a page or resource. In
-the event the user does select "See all results", present a
-[results page](basic-search). Always include the number of search results,
-including for searches with no results.
+the event the user does select "See all results", present a results page. Always
+include the number of search results, including for searches with no results.
 
 ## Accessibility
 
