docs: broken link fixes part 3

--- a/src/pages/help/faqs/index.mdx
+++ b/src/pages/help/faqs/index.mdx
@@ -27,7 +27,7 @@ and
 
 ### How can I contribute and/or propose new components/ideas?
 
-Check out our [contribution overview](/how-to-contribute/overview) to learn all
+Check out our [contribution overview](/contributing/overview) to learn all
 about the different ways to contribute. Thanks for the help!
 
 ### Which browsers are supported?
