--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -4,7 +4,7 @@ export default HomepageTemplate;
 
 <FeatureCard
     color="dark"
-    href="/get-started/design"
+    href="/designing/get-started"
     subTitle="Start"
     title="Designing"
     actionIcon="arrowRight"
@@ -25,7 +25,7 @@ export default HomepageTemplate;
 
 <FeatureCard
     color="dark"
-    href="/get-started/develop/react"
+    href="/developing/get-started"
     subTitle="Start"
     title="Developing"
     actionIcon="arrowRight"
@@ -55,7 +55,7 @@ building websites and user interfaces. See a
   <ResourceCard
     color="dark"
     subTitle="Sketch libraries"
-    href="/resources#theme-libraries"
+    href="/designing/kits/sketch"
     >
       <MdxIcon name="sketch" />
   </ResourceCard>
